--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <link rel="stylesheet" href="./projects/biggy.css">
+        <link rel="stylesheet" href="420rley/projects/biggy.css">
         <title>Biggy MA Broski</title>
         <link rel="icon" type="icon" href="/pictures/biggy icon.png">
     </head>
